Mac build fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,6 +278,7 @@ if( APPLE )
   else()
     set( CMAKE_OSX_ARCHITECTURES i386 )
   endif()
+  set_linker_flag( "-Wl,-no_pie" )
   mark_as_advanced( CMAKE_OSX_ARCHITECTURES )
   set( CMAKE_INSTALL_RPATH "@executable_path/" )
   set( CMAKE_BUILD_WITH_INSTALL_RPATH ON )
@@ -334,9 +335,9 @@ elseif( WIN32 )
   endif()
 elseif( APPLE )
   if( ARCH STREQUAL "x86_64" )
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx10.7_64 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx64 )
   else()
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx10.7_32 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx32 )
   endif()
 endif()
 
