CMakeLists: build rendererGL in rendererGL3.so instead of librendererGL3.so

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1526,7 +1526,7 @@ if( BUILD_NEW_RENDERER )
   add_library( rendererGL MODULE ${RENDERERGLLIST} ${SHAREDLIST} ${LIBSRC_BASE} ${LIBSRC_RENDERER} )
   set_property( TARGET rendererGL APPEND PROPERTY COMPILE_DEFINITIONS USE_XREAL_RENDERER )
   target_link_libraries( rendererGL ${LIBS_RENDERER} ${LIBS_BASE} )
-  set_target_properties( rendererGL PROPERTIES OUTPUT_NAME "rendererGL3" )
+  set_target_properties( rendererGL PROPERTIES OUTPUT_NAME "rendererGL3" PREFIX "" )
   if( USE_SMP )
     set_property( TARGET rendererGL APPEND PROPERTY COMPILE_DEFINITIONS SMP )
   endif()
