--- a/main/default.cfg
+++ b/main/default.cfg
@@ -62,7 +62,7 @@ bind  r             reload
 bind  b             "buy ammo"
 bind  m             "itemact medkit"
 bind  q             +activate
-bind  e             if alt "/deconstruct marked" /deconstruct
+bind  e             modcase alt "/deconstruct marked" /deconstruct
 bind  f             +taunt
 bind  g             +rally
 bind  h             scoresUp
@@ -91,4 +91,4 @@ bind  F4            "teamvote no"
 //
 //  DEVELOPER KEYS
 //
-bind  F11           if shift /screenshotJPEG /screenshotPNG
+bind  F11           modcase shift /screenshotJPEG /screenshotPNG
