--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,14 +92,14 @@ include(CheckCXXCompilerFlag)
 
 # Set flag without checking, optional argument specifies build type
 macro( set_c_flag FLAG )
-  if( ARGC GREATER 1 )
+  if( ${ARGC} GREATER 1 )
     set( CMAKE_C_FLAGS_${ARGV1} "${CMAKE_C_FLAGS_${ARGV1}} ${FLAG}" )
   else()
     set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAG}" )
   endif()
 endmacro()
 macro( set_cxx_flag FLAG )
-  if( ARGC GREATER 1 )
+  if( ${ARGC} GREATER 1 )
     set( CMAKE_CXX_FLAGS_${ARGV1} "${CMAKE_CXX_FLAGS_${ARGV1}} ${FLAG}" )
   else()
     set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAG}" )
