Remove conditional on libopus-dev dependency.

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends: debhelper (>= 8.0.0), g++ (>= 4.7) | g++-4.7, po-debconf, cmake,
 	libspeexdsp-dev,
 	libtheora-dev,
 	libvorbis-dev,
-	libopusfile-dev | cmake (<< 2.8.11),
+	libopusfile-dev,
 	libwebp-dev (>> 0.2),
 	libxvidcore-dev | cmake (<< 2.8.5),
 	libgeoip-dev,
