Don't build tty client since it doesn't get packaged.

--- a/debian/rules
+++ b/debian/rules
@@ -27,6 +27,7 @@ override_dh_auto_configure:
 		 -DGAME_QVM=OFF \
 		 -DUSE_OPENAL_DLOPEN=OFF \
 		 -DUSE_SDL2=${SDL2} \
+		 -DBUILD_TTY_CLIENT=OFF \
 		 $(shell test ! -f /usr/include/opus/opus.h || echo -DUSE_INTERNAL_OPUS=OFF) \
 		 $(shell test -f /usr/include/xvid.h || echo -DUSE_CIN_XVID=OFF) \
 		 $(shell test -d /usr/include/webp || echo -DUSE_WEBP=OFF)
