--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,7 +235,7 @@ else()
 
   # Warning options
   set_c_cxx_flag( "-Wall" )
-  set_c_cxx_flag( "-fpermissive" )
+  set_cxx_flag( "-fpermissive" )
   if( USE_WEXTRA )
     set_c_cxx_flag( "-Wextra" )
   else()
