Remove QVM_COMPAT, allow both QVM and NaCl ABI at the same time.
* Made GameVM an abstract class implemented by QVMGameVM and NaClGameVM
* The QVM native VMs are now name-qvm-native.so
* NaCl compilation options are visible but off by default

Still TODO:
* Better reporting of errors when creating VMs
* Add a prefix to NaCl native VMs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,14 +30,13 @@ project( Daemon C CXX )
 
 option( ENABLE_LTO "Use link-time optimization for release builds" 0 )
 option( ENABLE_HARDENING "Use stack protection and other hardening flags" 0 )
-option( ENABLE_QVM_COMPAT "Configure the engine to use QVMs instead of NaCl" 1 )
 
 option( BUILD_CLIENT "Build Daemon client" 1 )
 option( BUILD_SERVER "Build Daemonded server" 1 )
-cmake_dependent_option( BUILD_GAME_NACL_NATIVE "Build native NaCl game logic " 1 "NOT ENABLE_QVM_COMPAT" 0 )
-cmake_dependent_option( BUILD_GAME_NACL "Build NaCl game logic" 1 "NOT ENABLE_QVM_COMPAT" 0 )
-cmake_dependent_option( BUILD_GAME_NATIVE "Build native game logic " 1 ENABLE_QVM_COMPAT 0 )
-cmake_dependent_option( BUILD_GAME_QVM "Build QVM game logic" 1 ENABLE_QVM_COMPAT 0 )
+option( BUILD_GAME_NACL_NATIVE "Build native NaCl game logic" 0)
+option( BUILD_GAME_NACL "Build NaCl game logic" 0)
+option( BUILD_GAME_QVM_NATIVE "Build native game logic " 1)
+option( BUILD_GAME_QVM "Build QVM game logic" 1)
 option( BUILD_TTY_CLIENT "Build Daemon headless client" 1 )
 cmake_dependent_option( BUILD_OLD_RENDERER "Build old renderer library" 1 BUILD_CLIENT 0 )
 cmake_dependent_option( BUILD_NEW_RENDERER "Build new renderer library" 1 BUILD_CLIENT 0 )
@@ -265,11 +264,6 @@ if( APPLE )
   set_linker_flag( "-Wl,-no_pie" )
   set( CMAKE_INSTALL_RPATH "@executable_path/" )
   set( CMAKE_BUILD_WITH_INSTALL_RPATH ON )
-endif()
-
-# QVM compatibility
-if( ENABLE_QVM_COMPAT )
-  add_definitions( -DQVM_COMPAT )
 endif()
 
 # Mumble link support
@@ -506,6 +500,8 @@ set( ENGINELIST
   ${ENGINE_DIR}/framework/ConsoleHistory.h
   ${ENGINE_DIR}/framework/LogSystem.cpp
   ${ENGINE_DIR}/framework/LogSystem.h
+  ${ENGINE_DIR}/framework/VirtualMachine.cpp
+  ${ENGINE_DIR}/framework/VirtualMachine.h
   ${ENGINE_DIR}/qcommon/cm_load.c
   ${ENGINE_DIR}/qcommon/cm_trisoup.c
   ${ENGINE_DIR}/qcommon/cm_patch.c
@@ -536,31 +532,22 @@ set( ENGINELIST
   ${ENGINE_DIR}/qcommon/net_ip.c
   ${ENGINE_DIR}/qcommon/parse.c
   ${ENGINE_DIR}/qcommon/translation.cpp
+  ${ENGINE_DIR}/qcommon/vm.c
+  ${ENGINE_DIR}/qcommon/vm_interpreted.c
+  ${ENGINE_DIR}/qcommon/vm_local.h
+  ${ENGINE_DIR}/qcommon/vm_traps.h
   ${ENGINE_DIR}/sys/sys_main.c
   ${ENGINE_DIR}/sys/con_log.c
   ${ENGINE_DIR}/qcommon/qcommon.h
   ${ENGINE_DIR}/qcommon/surfaceflags.h
 )
 
-if( ENABLE_QVM_COMPAT )
-  set( ENGINELIST ${ENGINELIST}
-    ${ENGINE_DIR}/qcommon/vm.c
-    ${ENGINE_DIR}/qcommon/vm_interpreted.c
-    ${ENGINE_DIR}/qcommon/vm_local.h
-    ${ENGINE_DIR}/qcommon/vm_traps.h
-  )
-  if( ARCH STREQUAL "x86" OR ARCH STREQUAL "x86_64" )
-    set( ENGINELIST ${ENGINELIST} ${ENGINE_DIR}/qcommon/vm_x86.c )
-    if( MSVC AND CMAKE_CL_64 )
-      add_custom_command( OUTPUT vm_x86_64.obj COMMAND ml64 ARGS /c "${ENGINE_DIR}/qcommon/vm_x86_64.asm" MAIN_DEPENDENCY ${ENGINE_DIR}/qcommon/vm_x86_64.asm )
-      set( ENGINELIST ${ENGINELIST} vm_x86_64.obj )
-    endif()
+if( ARCH STREQUAL "x86" OR ARCH STREQUAL "x86_64" )
+  set( ENGINELIST ${ENGINELIST} ${ENGINE_DIR}/qcommon/vm_x86.c )
+  if( MSVC AND CMAKE_CL_64 )
+    add_custom_command( OUTPUT vm_x86_64.obj COMMAND ml64 ARGS /c "${ENGINE_DIR}/qcommon/vm_x86_64.asm" MAIN_DEPENDENCY ${ENGINE_DIR}/qcommon/vm_x86_64.asm )
+    set( ENGINELIST ${ENGINELIST} vm_x86_64.obj )
   endif()
-else()
-  set( ENGINELIST ${ENGINELIST}
-    ${ENGINE_DIR}/framework/VirtualMachine.cpp
-    ${ENGINE_DIR}/framework/VirtualMachine.h
-  )
 endif()
 
 if( WIN32 )
@@ -1044,9 +1031,7 @@ else()
   add_definitions( -DNACL_BUILD_SUBARCH=32 )
 endif()
 include_directories( ${LIB_DIR}/nacl )
-if( NOT ENABLE_QVM_COMPAT )
-  set( LIBSRC_ENGINE ${LIBSRC_ENGINE} ${NACLLIST_NATIVE} )
-endif()
+set( LIBSRC_ENGINE ${LIBSRC_ENGINE} ${NACLLIST_NATIVE} )
 
 # SDL, required for all targets on win32 because of iconv
 if( BUILD_CLIENT OR BUILD_NEW_RENDERER OR BUILD_OLD_RENDERER OR ( WIN32 AND (BUILD_TTY_CLIENT OR BUILD_SERVER ) ) )
@@ -1229,7 +1214,7 @@ endif()
 include( CMakeParseArguments )
 function( GAMEMODULE )
   # ParseArguments setup
-  set( oneValueArgs NAME OUTPUT_DIR )
+  set( oneValueArgs NAME OUTPUT_DIR HAS_NACL )
   set( multiValueArgs COMPILE_DEF FILES NACL_FILES NATIVE_FILES QVM_FILES QVM_ASM )
   cmake_parse_arguments( GAMEMODULE "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN} )
   if( CMAKE_CFG_INTDIR STREQUAL "." )
@@ -1238,35 +1223,36 @@ function( GAMEMODULE )
     set( GAMEMODULE_FULL_OUTPUT_DIR ${CMAKE_BINARY_DIR}/${CMAKE_CFG_INTDIR}/${GAMEMODULE_OUTPUT_DIR} )
   endif()
 
-  if( BUILD_GAME_NACL_NATIVE )
-    add_executable( ${GAMEMODULE_NAME}-native ${GAMEMODULE_FILES} ${SHAREDLIST} ${GAMEMODULE_NACL_FILES} ${NACLLIST_NATIVE} )
-    target_link_libraries( ${GAMEMODULE_NAME}-native ${LIBS_BASE} )
-    set_target_properties( ${GAMEMODULE_NAME}-native PROPERTIES
+  if( GAMEMODULE_HAS_NACL AND BUILD_GAME_NACL_NATIVE )
+    add_executable( ${GAMEMODULE_NAME}-nacl-native ${GAMEMODULE_FILES} ${SHAREDLIST} ${GAMEMODULE_NACL_FILES} ${NACLLIST_NATIVE} )
+    target_link_libraries( ${GAMEMODULE_NAME}-nacl-native ${LIBS_BASE} )
+    set_target_properties( ${GAMEMODULE_NAME}-nacl-native PROPERTIES
       OUTPUT_NAME ${GAMEMODULE_NAME}
       RUNTIME_OUTPUT_DIRECTORY ${GAMEMODULE_OUTPUT_DIR}
       COMPILE_DEFINITIONS ${GAMEMODULE_COMPILE_DEF}
     )
     foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
       string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UP )
-      set_target_properties( ${GAMEMODULE_NAME}-native PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UP} ${OUTPUTCONFIG}/${GAMEMODULE_OUTPUT_DIR} )
+      set_target_properties( ${GAMEMODULE_NAME}-nacl-native PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UP} ${OUTPUTCONFIG}/${GAMEMODULE_OUTPUT_DIR} )
     endforeach()
   endif()
 
-  if( BUILD_GAME_NATIVE )
-    add_library( ${GAMEMODULE_NAME} MODULE ${GAMEMODULE_FILES} ${SHAREDLIST} ${GAMEMODULE_NATIVE_FILES} )
-    target_link_libraries( ${GAMEMODULE_NAME} ${LIBS_BASE} )
-    set_target_properties( ${GAMEMODULE_NAME} PROPERTIES
+  if( BUILD_GAME_QVM_NATIVE )
+	set( QVM_NATIVE_COMPILE_DEF ${GAMEMODULE_COMPILE_DEF} QVM)
+    add_library( ${GAMEMODULE_NAME}-qvm-native MODULE ${GAMEMODULE_FILES} ${SHAREDLIST} ${GAMEMODULE_NATIVE_FILES} )
+    target_link_libraries( ${GAMEMODULE_NAME}-qvm-native ${LIBS_BASE} )
+    set_target_properties( ${GAMEMODULE_NAME}-qvm-native PROPERTIES
       PREFIX ""
       LIBRARY_OUTPUT_DIRECTORY ${GAMEMODULE_OUTPUT_DIR}
-      COMPILE_DEFINITIONS ${GAMEMODULE_COMPILE_DEF}
+	  COMPILE_DEFINITIONS "${QVM_NATIVE_COMPILE_DEF}"
     )
     foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
       string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UP )
-      set_target_properties( ${GAMEMODULE_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UP} ${OUTPUTCONFIG}/${GAMEMODULE_OUTPUT_DIR} )
+      set_target_properties( ${GAMEMODULE_NAME}-qvm-native PROPERTIES LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UP} ${OUTPUTCONFIG}/${GAMEMODULE_OUTPUT_DIR} )
     endforeach()
   endif()
 
-  if( BUILD_GAME_NACL )
+  if( GAMEMODULE_HAS_NACL AND BUILD_GAME_NACL )
     if( CMAKE_CFG_INTDIR STREQUAL "." )
       set( NACL_DIR ${OBJ_DIR}/${GAMEMODULE_NAME}-nacl.dir )
     else()
@@ -1389,8 +1375,8 @@ function( GAMEMODULE )
       set( QVM_DIR ${OBJ_DIR}/${GAMEMODULE_NAME}-qvm.dir/${CMAKE_CFG_INTDIR} )
     endif()
 
-    set( QVM_COMPILE_OPTIONS -I${MOUNT_DIR}/gamelogic/game -I${MOUNT_DIR}/engine/qcommon -DQ3_VM -DQVM_COMPAT )
-    foreach( DEF ${GAMEMODULE_COMPILE_DEF} )
+    set( QVM_COMPILE_OPTIONS -I${MOUNT_DIR}/gamelogic/game -I${MOUNT_DIR}/engine/qcommon -DQ3_VM )
+	foreach( DEF ${GAMEMODULE_COMPILE_DEF} )
       set( QVM_COMPILE_OPTIONS ${QVM_COMPILE_OPTIONS} -D${DEF} )
     endforeach()
 
@@ -1404,7 +1390,7 @@ function( GAMEMODULE )
 
       if( QVM_FILEEXT STREQUAL ".c" )
         add_custom_command( OUTPUT ${ASM_FILE}
-          COMMAND lcc -target bytecode ${QVM_COMPILE_OPTIONS} ${QVM_FILE} -o ${ASM_FILE}
+		  COMMAND lcc -target bytecode ${QVM_COMPILE_OPTIONS} -DQVM ${QVM_FILE} -o ${ASM_FILE}
           DEPENDS lcc rcc cpp ${QVM_FILE}
           IMPLICIT_DEPENDS C ${QVM_FILE}
           WORKING_DIRECTORY ${QVM_DIR}
@@ -1434,6 +1420,7 @@ endif()
 GAMEMODULE( NAME game
   OUTPUT_DIR main
   COMPILE_DEF GAME
+  HAS_NACL 1
   FILES ${GAMELIST}
   NACL_FILES ${GAMENACLLIST}
   NATIVE_FILES ${GAMENATIVELIST}
@@ -1441,27 +1428,27 @@ GAMEMODULE( NAME game
   QVM_ASM ${GAMEASMLIST}
 )
 
-if( ENABLE_QVM_COMPAT )
-  GAMEMODULE( NAME cgame
-    OUTPUT_DIR main
-    COMPILE_DEF CGAME
-    FILES ${CGAMELIST}
-    NACL_FILES ${CGAMENACLLIST}
-    NATIVE_FILES ${CGAMENATIVELIST}
-    QVM_FILES ${CGAMEQVMLIST}
-    QVM_ASM ${CGAMEASMLIST}
-  )
+GAMEMODULE( NAME cgame
+  OUTPUT_DIR main
+  COMPILE_DEF CGAME
+  HAS_NACL 0
+  FILES ${CGAMELIST}
+  NACL_FILES ${CGAMENACLLIST}
+  NATIVE_FILES ${CGAMENATIVELIST}
+  QVM_FILES ${CGAMEQVMLIST}
+  QVM_ASM ${CGAMEASMLIST}
+)
 
-  GAMEMODULE( NAME ui
-    OUTPUT_DIR main
-    COMPILE_DEF UI
-    FILES ${UILIST}
-    NACL_FILES ${UINACLLIST}
-    NATIVE_FILES ${UINATIVELIST}
-    QVM_FILES ${UIQVMLIST}
-    QVM_ASM ${UIASMLIST}
-  )
-endif()
+GAMEMODULE( NAME ui
+  OUTPUT_DIR main
+  COMPILE_DEF UI
+  FILES ${UILIST}
+  HAS_NACL 0
+  NACL_FILES ${UINACLLIST}
+  NATIVE_FILES ${UINATIVELIST}
+  QVM_FILES ${UIQVMLIST}
+  QVM_ASM ${UIASMLIST}
+)
 
 ################################################################################
 # Engine
