--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -604,6 +604,10 @@ set( CLIENTLIST
   ${ENGINE_DIR}/audio/snd_codec_wav.c
   ${ENGINE_DIR}/audio/snd_openal.c
   ${ENGINE_DIR}/audio/snd_main.c
+  ${ENGINE_DIR}/audio/ALObjects.cpp
+  ${ENGINE_DIR}/audio/ALObjects.h
+  ${ENGINE_DIR}/audio/Sample.cpp
+  ${ENGINE_DIR}/audio/Sample.h
 )
 
 if( USE_MUMBLE )
