Audio: WIP on the rewrite:
* Introduce Sounds: the description of a sound (one shot, looping, music, streamed, with added reverb...)
* Introduce Emitters: where the sound is played and what positional effects to add.
* Broken
 * There is a small "tick" at the end of the sample in the menu not sure why
 * Removed music for now
 * Removed looping sounds for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -606,8 +606,12 @@ set( CLIENTLIST
   ${ENGINE_DIR}/audio/snd_main.c
   ${ENGINE_DIR}/audio/ALObjects.cpp
   ${ENGINE_DIR}/audio/ALObjects.h
+  ${ENGINE_DIR}/audio/Emitter.cpp
+  ${ENGINE_DIR}/audio/Emitter.h
   ${ENGINE_DIR}/audio/Sample.cpp
   ${ENGINE_DIR}/audio/Sample.h
+  ${ENGINE_DIR}/audio/Sound.cpp
+  ${ENGINE_DIR}/audio/Sound.h
 )
 
 if( USE_MUMBLE )
