--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,8 @@ endif()
 if( WIN32 )
   # Minimum Windows version: XP
   # Define WIN32 for compatibility (compiler defines _WIN32)
-  add_definitions( -DWINVER=0x501 -DWIN32 )
+  # Define NOMINMAX to prevent conflics between std::min/max and the min/max macros in WinDef.h
+  add_definitions( -DWINVER=0x501 -DWIN32 -DNOMINMAX )
   set( CMAKE_FIND_LIBRARY_PREFIXES ${CMAKE_FIND_LIBRARY_PREFIXES} "" "lib" )
 endif()
 if( MSVC )
