--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -606,6 +606,8 @@ set( CLIENTLIST
   ${ENGINE_DIR}/audio/snd_main.c
   ${ENGINE_DIR}/audio/ALObjects.cpp
   ${ENGINE_DIR}/audio/ALObjects.h
+  ${ENGINE_DIR}/audio/API.cpp
+  ${ENGINE_DIR}/audio/API.h
   ${ENGINE_DIR}/audio/Emitter.cpp
   ${ENGINE_DIR}/audio/Emitter.h
   ${ENGINE_DIR}/audio/Sample.cpp
