Audio WIP on the rewrite:
* Make a private audio header because I'm lazy
* API -> Audio to have <module>/<Module>.h for the API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -606,8 +606,9 @@ set( CLIENTLIST
   ${ENGINE_DIR}/audio/snd_main.c
   ${ENGINE_DIR}/audio/ALObjects.cpp
   ${ENGINE_DIR}/audio/ALObjects.h
-  ${ENGINE_DIR}/audio/API.cpp
-  ${ENGINE_DIR}/audio/API.h
+  ${ENGINE_DIR}/audio/Audio.cpp
+  ${ENGINE_DIR}/audio/Audio.h
+  ${ENGINE_DIR}/audio/AudioPrivate.h
   ${ENGINE_DIR}/audio/Emitter.cpp
   ${ENGINE_DIR}/audio/Emitter.h
   ${ENGINE_DIR}/audio/Sample.cpp
