--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,17 @@ language:
 
 compiler:
   - gcc
+  - clang
 
 install:
   - sudo sh -c 'echo deb http://debs.unvanquished.net precise main >>/etc/apt/sources.list'
   - sudo apt-key adv --keyserver x-hkp://pool.sks-keyservers.net --recv-key 06AF4C14
   - sudo apt-get -qq update
   - sudo apt-get -qq install cmake libwebp-dev libglew-dev libgmp-dev libjpeg8-dev libcurl4-gnutls-dev libfreetype6-dev libgeoip-dev libncursesw5-dev libogg-dev libopenal-dev libpng-dev libsdl1.2-dev libspeexdsp-dev libtheora-dev libvorbis-dev libopusfile-dev libxvidcore-dev nettle-dev zlib1g-dev
+
+before_script:
+  - wget http://clang.llvm.org/libstdc++4.6-clang11.patch;
+  - sudo patch /usr/include/c++/4.6/type_traits < libstdc++4.6-clang11.patch;
 
 script:
   - mkdir build
