--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ install:
   - sudo apt-key adv --keyserver x-hkp://pool.sks-keyservers.net --recv-key 06AF4C14
   - sudo apt-get -qq update
   - sudo apt-get -qq install cmake libwebp-dev libglew-dev libgmp-dev libjpeg8-dev libcurl4-gnutls-dev libfreetype6-dev libgeoip-dev libncursesw5-dev libogg-dev libopenal-dev libpng-dev libsdl1.2-dev libspeexdsp-dev libtheora-dev libvorbis-dev libopusfile-dev libxvidcore-dev nettle-dev zlib1g-dev
+  - sudo wget -O /usr/include/AL/efx-presets.h http://repo.or.cz/w/openal-soft.git/blob_plain/HEAD:/include/AL/efx-presets.h
+  - sudo wget -O /usr/include/AL/efx.h http://repo.or.cz/w/openal-soft.git/blob_plain/HEAD:/include/AL/efx.h
 
 script:
   - mkdir build
