Make -Og optional since it causes some values to be optimized out

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ cmake_dependent_option( USE_GEOIP "Use libgeoip" 1 "BUILD_SERVER OR BUILD_CLIENT
 option( USE_SDL2 "Enable SDL 2.0 support (incompatible with SDL 1.2)" 1 )
 option( USE_WEXTRA "Enable extra compilation warnings" 0 )
 option( USE_PEDANTIC "Tell the compiler to be pedantic" 0 )
+option( USE_DEBUG_OPTIMIZE "Try to optimize the debug build" 1 )
 
 set( NACL_SDK_PATH "" CACHE PATH "Path to native client SDK" )
 if( BUILD_GAME_NACL AND NOT NACL_SDK_PATH )
@@ -177,7 +178,9 @@ else()
   # Extra debug flags
   set_c_cxx_flag( "-g3" DEBUG )
   set_c_cxx_flag( "-g3" RELWITHDEBINFO )
-  try_c_cxx_flag( OPTIMIZE_DEBUG "-Og" DEBUG )
+  if ( USE_DEBUG_OPTIMIZE )
+    try_c_cxx_flag( OPTIMIZE_DEBUG "-Og" DEBUG )
+  endif()
 
   # C++11 support
   try_cxx_flag( GNUXX11 "-std=gnu++11" )
