--- a/main/configs/buildables/mgturret.attr.cfg
+++ b/main/configs/buildables/mgturret.attr.cfg
@@ -26,6 +26,9 @@ splashDamage      100
 splashRadius      100
 meansOfDeath      humanBuildable
 
+// Attack
+attackType        mgturret
+
 // Misc
 radarFadeOut      0.001
 transparentTest
