Default rotation: snowstation → chasm.

--- a/debian/configfiles/maprotation.cfg
+++ b/debian/configfiles/maprotation.cfg
@@ -1,6 +1,7 @@
 rotation1
 {
 	arachnid2
+	chasm-b1
 	karith
 	methane-beta1
 	nano
@@ -9,7 +10,6 @@ rotation1
 	orion
 	parpax
 	plat23-b11
-	snowstation-b4
 	spacetracks-r1
 	station15-r1
 
