Add buildableAttributes_t.weapon for client side weapon effects. Fixes turret effects.

--- a/main/configs/buildables/mgturret.attr.cfg
+++ b/main/configs/buildables/mgturret.attr.cfg
@@ -24,6 +24,7 @@ regen             5
 // Explosion
 splashDamage      100
 splashRadius      100
+weapon            mgturret
 meansOfDeath      humanBuildable
 
 // Misc
