--- a/main/configs/buildables/trapper.attr.cfg
+++ b/main/configs/buildables/trapper.attr.cfg
@@ -25,6 +25,7 @@ regen             6
 // Explosion
 splashDamage      15
 splashRadius      100
+weapon            lockblob
 meansOfDeath      alienBuildable
 
 // Misc
