--- a/main/configs/buildables/hive.attr.cfg
+++ b/main/configs/buildables/hive.attr.cfg
@@ -25,6 +25,7 @@ regen             10
 // Explosion
 splashDamage      30
 splashRadius      200
+weapon            hive
 meansOfDeath      alienBuildable
 
 // Misc
