--- a/pkg/unvanquished_src.dpkdir/configs/buildables/mgturret.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/mgturret.attr.cfg
@@ -24,6 +24,7 @@ regen             5
 // Explosion
 splashDamage      100
 splashRadius      100
+weapon            mgturret
 meansOfDeath      humanBuildable
 
 // Misc
