--- a/pkg/unvanquished_src.dpkdir/configs/buildables/tesla.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/tesla.attr.cfg
@@ -24,6 +24,7 @@ regen             5
 // Explosion
 splashDamage      50
 splashRadius      100
+weapon            teslagen
 meansOfDeath      humanBuildable
 
 // Misc
